<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtView_Titulo"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_Ejercicio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_Mensaje" />

        <Button
            android:id="@+id/btn_Ejercicio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_Navegacion" />

        <Button
            android:id="@+id/btn_Ejercicio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_Compartir" />

        <Button
            android:id="@+id/btn_Ejercicio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_Llamada" />

        <Button
            android:id="@+id/btn_Ejercicio5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_WebPage" />

        <Button
            android:id="@+id/btn_Ejercicio6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_Correo" />

        <Button
            android:id="@+id/btn_Ejercicio7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_Imagen" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>