<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio6">

    <TextView
        android:id="@+id/txtView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio6"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_Text_Destinatario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/ingresa_destinatario"
        android:autofillHints="emailAddress"
        android:importantForAutofill="yes"
        android:padding="16dp"
        android:textColor="#000000"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView6" />

    <EditText
        android:id="@+id/edit_Text_Asunto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/ingresa_asunto"
        android:autofillHints="emailSubject"
        android:importantForAutofill="yes"
        android:padding="16dp"
        android:textColor="#000000"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Text_Destinatario" />

    <EditText
        android:id="@+id/edit_Text_Cuerpo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/ingresa_cuerpo"
        android:autofillHints="emailBody"
        android:importantForAutofill="yes"
        android:inputType="textMultiLine"
        android:padding="16dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_EnviarCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Text_Asunto"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_EnviarCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar_correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
